src/objects/UnpaidInterns2__c.object
<CustomObject>
    <fields>
        <fullName>A10__c</fullName>
        <label>A10</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A11__c</fullName>
        <label>A11</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A12__c</fullName>
        <label>A12</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A5_Other__c</fullName>
        <label>A5_Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>UnpaidInterns2</relationshipLabel>
        <relationshipName>UnpaidInterns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EthnicGroup__c</fullName>
        <label>EthnicGroup</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_a_good_story__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has a good story</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InterviewDate__c</fullName>
        <label>InterviewDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InterviewerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InterviewerId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UnpaidInterns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MemberName__c</fullName>
        <label>MemberName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrimaryLanguage__c</fullName>
        <label>PrimaryLanguage</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedDate__c</fullName>
        <label>UpdatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated</label>
        <type>Checkbox</type>
    </fields>
    <label>UnpaidInterns2</label>
    <nameField>
        <label>UnpaidInterns2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UnpaidInterns2</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>